# OdyssNet

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OdyssNet.ipynb  Predictive Coding Research.md  README.md  README_TR.md  REMOVE_CHAOS_OPTIMIZER.md  RealNET.ipynb  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
PoC/: PoC_STANDARDS.md  convergence_gates.py  convergence_identity.py  convergence_mnist.py  test_all.py
PoC/experiments/: convergence_adder.py  convergence_detective_thinking.py  convergence_latch.py  convergence_mnist_embed.py  convergence_mnist_record.py  convergence_mnist_reverse_record.py  convergence_mnist_revive.py  convergence_mnist_scaled.py  convergence_mnist_tiny.py  convergence_odyssnet_as_database.py  convergence_realnet_as_database.py  convergence_sine_wave.py  convergence_skill_transfer.py  convergence_stopwatch.py  experiment_llm.py  experiment_llm_fineweb.py
docs/: LIBRARY.md
examples/: convergence_gates.py  convergence_identity.py  convergence_mnist.py  test_all.py
examples/advanced/: convergence_adder.py  convergence_detective_thinking.py  convergence_latch.py  convergence_mnist_embed.py  convergence_mnist_record.py  convergence_mnist_reverse_record.py  convergence_mnist_revive.py  convergence_mnist_scaled.py  convergence_mnist_tiny.py  convergence_sine_wave.py  convergence_skill_transfer.py  convergence_stopwatch.py  experiment_llm.py
odyssnet/: LIBRARY.md  __init__.py
odyssnet/core/: network.py
odyssnet/training/: chaos_optimizer.py  chaos_scheduler.py  trainer.py
odyssnet/utils/: data.py  history.py  neurogenesis.py  odyssstore.py
realnet/: LIBRARY.md  __init__.py
realnet/core/: network.py
realnet/training/: chaos_optimizer.py  chaos_scheduler.py  trainer.py
realnet/utils/: neurogenesis.py  realstore.py
tests/: conftest.py
tests/core/: test_network.py
tests/training/: test_chaos_optimizer.py  test_chaos_optimizer_extra.py  test_chaos_scheduler.py  test_trainer.py
tests/utils/: test_data.py  test_history.py  test_neurogenesis.py  test_odyssstore.py
tmp/: TODO.md
